feat: add support of multiple data response into controllers
